# cosmos

./: .gitignore  README.md
codex/: README.md
codex/00-vault/: 00-indice.md  codex-std-001-estandar-del-codex.md
codex/10-monorepo/: moc-monorepo.md
codex/20-pulsar/: moc-pulsar.md
codex/20-pulsar/roadmap/: roadmap-pulsar.md
codex/30-crux/: moc-crux.md
docs/: identidad-y-autorizacion.md
docs/estandares/: README.md  gestor-de-paquetes.md
projects/crux/: .env.example  .gitignore  .prettierignore  CLAUDE.md  README.md  ROADMAP.md  index.html  package.json  pnpm-lock.yaml
projects/pulsar/: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  explore.py  pyproject.toml
projects/pulsar/docs/: arquitectura-restful.md  diccionario-datos.md  observability.md  reabasto-cedis-investigacion.md  salvage-inventory.md
projects/pulsar/docs/adr/: 0001-python-toolchain.md  0002-ledger-unificado-multiempresa.md  0003-estrategia-estrangulamiento.md
projects/pulsar/docs/estandares/: README.md  modelado-de-datos.md
projects/pulsar/logs/: logs.sqlite
projects/pulsar/src/pulsar/: __init__.py  paths.py
projects/pulsar/src/pulsar/api/: __init__.py  __main__.py  app.py  logs.py  problem.py  runs.py  schemas.py
projects/pulsar/src/pulsar/config/: __init__.py  hana.py  settings.py
projects/pulsar/src/pulsar/extract/: __init__.py  oinm.py  oitw.py
projects/pulsar/src/pulsar/jobs/: __init__.py  __main__.py  build_movements.py  core.py  movements.py  runs.py  scheduler.py
projects/pulsar/src/pulsar/ledger/: __init__.py  movements.py  movimientos.py  reconcile.py  store.py
projects/pulsar/src/pulsar/logger/: __init__.py  config.py  context.py  records.py  service.py  sinks.py
projects/pulsar/src/pulsar/logger/capture/: __init__.py  http.py  jobs.py  resources.py
projects/pulsar/src/pulsar/model/: __init__.py
projects/pulsar/src/pulsar/model/movements/: __init__.py  build.py  schema.py  validate.py
projects/pulsar/src/pulsar/pipeline/: __init__.py  foundation.py
projects/pulsar/src/pulsar/retail/: __init__.py  calendar.py
projects/pulsar/src/pulsar/sources/: __init__.py  oinm.py  oitw.py
projects/pulsar/src/pulsar/storage/: __init__.py  lake.py
projects/pulsar/tests/: conftest.py  test_api.py  test_build.py  test_jobs.py  test_logger.py  test_logger_capture.py  test_logger_query.py  test_movements.py  test_movimientos.py  test_oinm.py  test_retail_calendar.py  test_runs_store.py  test_scheduler.py  test_smoke.py
(+26 files in other folders)
